--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.postgresql-42.2.7.jar=C:\\Users\\sariah\\Documents\\NetBeansProjects\\postgresql-42.2.14.jre7.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\sariah\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
