fix : correción [codigo/id] usuario/libs postgres

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,10 +32,12 @@ dist.jar=${dist.dir}/ConsultaBD_Mail.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.postgresql-42.2.7.jar=/home/bluenet/practicas/tecno/tituladosTecnoWeb/postgresql-42.2.7.jar
+file.reference.postgresql-9.4.1209.jar=libs\\postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.7.jar}
+    ${file.reference.postgresql-42.2.7.jar}:\
+    ${file.reference.postgresql-9.4.1209.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
