--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,8 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.postgresql-42.2.7.jar=C:\\Users\\sariah\\Documents\\NetBeansProjects\\postgresql-42.2.14.jre7.jar
+file.reference.postgresql-42.2.7.jar=C:\\Users\\eyver-dev\\Documents\\INF513_Tecnologia_web\\proyecto_materia\\Consulta-BDvia-Mail\\libs\\postgresql-9.4.1209.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\sariah\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\eyver-dev\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
