--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.postgresql-42.2.7.jar=C:\\Users\\eyver-dev\\Documents\\INF513_Tec
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\eyver-dev\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\sariah\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
